--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     </section>
                 </div>
                 <div id="th" class="toggle-block">
-                    <h3 class="section-subheading section-title">Thailand | Evil Avian (วิหคสามานย์)</h3>
+                    <h3 class="section-subheading section-title">Thailand | Evil Avian (วิหคทมิฬ)</h3>
                     <div class="dropdown-icon"><span></span><span></span></div>
                     <section class="section-content">
                         <p>In modern days, Weltkrake is worshipped by most and many still make offerings to its spirits</p>
