--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             text-indent: 0;
         }
 
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+
         p {
             margin-block: 1.75em;
             transition: 0.5s;
@@ -356,7 +361,7 @@
                         <h4 class="text-emphasize">1897</h4>
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">SILVER EAGLE</span></p>
                         <h4 class="text-emphasize">1931</h4>
-                        <p>The Weltkrake appeared in the form of a <span class="text-emphasize">GREEN PHEASANT</span>.</p>
+                        <p>The Weltkrake appeared in the form of a <span class="text-emphasize">GREEN PHEASANT</span> with suckers all over its head.</p>
                         <p>The rest of official records by the Chinese government are still classfied.</p>
                     </section>
                 </div>
@@ -426,7 +431,10 @@
         </section>
     </main>
     <footer class="primary-footer">
-        <p class="text-right">Made by Parama Wattanakrai</p>
+        <p class="text-center text-emphasize ff-display">CREDITS</p>
+        <p><a href="https://fonts.google.com/specimen/Raleway" target="_blank"><span class="text-emphasize">Matt McInerney, Pablo Impallari & Rodrigo Fuenzalida</span> - Raleway (Typeface)</a></p>
+        <p><a href="https://fonts.google.com/specimen/Bitter" target="_blank"><span class="text-emphasize">Sol Matas</span> - Bitter (Typeface)</a></p>
+        <p class="text-right"><a href="https://github.com/ParamaWattanakrai" target="_blank"><span class="text-emphasize">WELTKRAKE</span> Made by Parama Wattanakrai</a></p>
     </footer>
     <script>
         const sections = document.querySelectorAll('.toggle-block');
