--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <div class="container">
             <h2 class="section-heading">LORE</h2>
             <p>The mystical creature, or rather, "creatures" had roamed the Earth on multiple occasions, once thought as separate animals with different motives.
-                However with undenyable similar characteristics, some claim that the creatures were one great entity all along, with its tendency of infinite growth,
+                However with undeniable similar characteristics, some claim that the creatures were one great entity all along, with its tendency of infinite growth,
                 it's been given the name "Weltkrake"</p>
             <p>First seen in early mercantilist England, the mystical beast has grown in strength, power and scale.
                 What once were just helpless tortoises now became an octopus large enough to grab the entire planet Earth.</p>
@@ -403,13 +403,13 @@
                         <p>The first recorded sighting of Weltkrake was witnessed by thousands at Port of London, somewhen in the later part of 16th century.
                             With hundreds of thousands of <span class="text-emphasize">TORTOISES</span>, one by one, crawled up the English shore.
                             The merchants were terrified of its sudden appearance,
-                            but were later in ecstacy when they found Indian spice delicately stored in the tortoises shells after killing some of them.
+                            but were later in ecstasy when they found Indian spice delicately stored in the tortoises shells after killing some of them.
                             Within a few days the tortoise horde was all but dead, leaving behind wealth for the merchants overnight.</p>
                         <p>This event caused people from all over Europe to come by Port of London way more often, in hopes of being present of another miracle,
                             many worshipped tortoise for the fortunes they got. The number of believers grew to a significant size, scaring the Catholic church of the time,
                             prompting them to ban tortoise worshipping, claiming its a trial by God to see human greed.</p>
                         <p>Some claimed that the divine punishment upon England was the English civil war in the next century</p>
-                        <p>Later the Protestants adopted an opposing stance of the Catholics by claiming the turtoises were divine gifts from God</p>
+                        <p>Later the Protestants adopted an opposing stance of the Catholics by claiming the tortoises were divine gifts from God</p>
                         <h4 class="text-emphasize">1860</h4>
                         <p>On 25 October 1860, Weltkrake appeared in the form a great <span class="text-emphasize">LION</span> right in front of Buckingham Palace,
                             capable of intelligent conversation and turning opium into gold. It gave much fortune to merchants and the royal family itself</p>
@@ -417,9 +417,9 @@
                         <h4 class="text-emphasize">1960</h4>
                         <p>On 14 February 1960, the Golden Lion materialized once again at Buckingham Palace, but it now has the front half of a lion, and the back half of an octopus,
                             with its eight tentacles. And the once great and respected creature was now lying weak and fatally injured for the pedestrians of England to see.
-                            It vanished after hours of agnonizing torment.</p>
+                            It vanished after hours of agonizing torment.</p>
                         <p>This event is still disputed with one side claiming that there was no photographic evidence, and that it was an attempt to disrespect the Golden Lion.
-                            But the other side was skeptical and claimed the British government covered it up to protect the creature's reputation and divine appearence</p>
+                            But the other side was skeptical and claimed the British government covered it up to protect the creature's reputation and divine appearance</p>
                     </section>
                 </div>
                 <div id="cn" class="toggle-block">
@@ -435,7 +435,7 @@
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">SILVER EAGLE</span></p>
                         <h4 class="text-emphasize">1931</h4>
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">GREEN PHEASANT</span> with suckers all over its head.</p>
-                        <p>The rest of official records by the Chinese government are still classfied.</p>
+                        <p>The rest of official records by the Chinese government are still classified.</p>
                     </section>
                 </div>
                 <div id="de" class="toggle-block">
