--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     Its massive body, dwarfs even the largest of whales, and its tentacles, not limited to eight, are each longer than any coastline on Earth,
                     tightly gripping the entire Earth. Ironic to its size, Weltkrake can be easily "overlooked",
                     invisible to the naked eyes which belong to people who do not actively search for it.</p>
-                <p>But it has not always been this huge or powerful. In the past it had taken many forms</p>
+                <p>But it has not always been this huge or powerful. In the past it had taken many forms, tortoises, lion, bear, different kinds of birds and more.</p>
                 <hr class="separator">
             </div>
         </section>
@@ -478,7 +478,7 @@
                     <h3 class="section-subheading section-title">Russia & Eastern Bloc | Weltkrake (Мировой Осьминог)</h3>
                     <div class="dropdown-icon"><span></span><span></span></div>
                     <section class="section-content">
-                        <p>Altough there were abnormally numerous rumors of prior Weltkrake "activities" in Russia, there were no concrete records nor consistent stories of it.
+                        <p>Although there were abnormally numerous rumors of prior Weltkrake "activities" in Russia, there were no concrete records nor consistent stories of it.
                             People claimed it looked like a bear</p>
                         <h4 class="text-emphasize">1914</h4>
                         <p>Weltkrake first appeared in Russia on 28 July 1914. In the form of giant <span class="text-emphasize">OCTOPUS</span> towering over the Winter Palace,
@@ -510,7 +510,7 @@
         </section>
     </main>
     <footer class="primary-footer">
-        <p class="text-center text-emphasize ff-display">CREDITS</p>
+        <h2 class="text-center section-heading">CREDITS</h2>
         <p><a href="https://fonts.google.com/specimen/Raleway" target="_blank"><span class="text-emphasize">Matt McInerney, Pablo Impallari & Rodrigo Fuenzalida</span> - Raleway (Typeface)</a></p>
         <p><a href="https://fonts.google.com/specimen/Bitter" target="_blank"><span class="text-emphasize">Sol Matas</span> - Bitter (Typeface)</a></p>
         <p class="text-right"><a href="https://github.com/ParamaWattanakrai" target="_blank"><span class="text-emphasize">WELTKRAKE</span> Made by Parama Wattanakrai</a></p>
@@ -524,7 +524,7 @@
             pos.style.setProperty('--y', e.clientY + 'px')
         })
 
-        function  lightSwitch() {
+        function lightSwitch() {
             document.getElementById('flashlight').classList.toggle('off');
         }
 
